# cti-platform

./: .env.example  .gitignore  CREDENTIAL_ROTATION.md  DEPLOYMENT_NOTES.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  requirements.txt  start.bat
backend/: .dockerignore  Dockerfile  alembic.ini  create_analyst.py  generate_telegram_session.py  generate_telegram_session_qr.py  pyproject.toml  requirements.txt  scratch.py  scratch_check_run.py  scratch_get_errors.py  scratch_health.py  scratch_telegram.py  scratch_test.py  scratch_trigger.py  trigger.py  update_passwords.py
backend/alembic/: env.py
backend/alembic/versions/: 20260607_1898232c9028_initial_schema.py  20260607_5537be644d83_apply_db_review_fixes.py  20260607_a1b2c3d4e5f6_add_posts_and_evidence_reports.py  20260608_f8a2b1c9d3e7_add_metadata_to_collection_runs.py  20260609_6b6b614f7975_alert_fixes.py  20260609_89bc8e3ff9d7_add_engine_version_and_weights_snapshot.py  20260609_9bc13418fd30_add_data_confidence.py  20260610_cdbfb07611c3_add_phase_2_and_3_models.py  20260611_112038031a58_add_content_hash.py  20260611_1dfaed3c4645_add_report_links.py  add_content_status.py  (+6 more)
backend/app/: __init__.py  main.py
backend/fixtures/: reddit_posts.json  telegram_posts.json  x_posts.json
backend/scripts/: create_user.py  query_db.py
backend/tests/: conftest.py  test_alert_fixes.py  test_audit_logs.py  test_config.py  test_health.py  test_priority1.py  test_priority2.py  test_rbac.py  test_reddit.py  test_telegram.py  test_websocket.py  test_ws_verification.py  test_x.py  verify_audit.py
(+122 files in other folders)
